--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/forms": "^0.5.4",
     "@types/node": "18.15.5",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
@@ -16,6 +17,8 @@
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "gray-matter": "^4.0.3",
+    "gsap": "^3.12.2",
+    "marked": "^7.0.3",
     "next": "13.2.4",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
@@ -23,12 +26,17 @@
     "react-icons": "^4.10.1",
     "remark": "^14.0.2",
     "remark-html": "^15.0.2",
-    "typescript": "5.0.2"
+    "tailwind-bootstrap-grid": "^5.0.1",
+    "typescript": "5.0.2",
+    "swiper": "^9.0.0"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.9",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
-    "tailwindcss": "^3.3.1"
+    "tailwindcss": "^3.3.1",
+    "prettier": "^2.8.3",
+    "prettier-plugin-tailwindcss": "^0.2.2",
+    "sass": "^1.57.1"
   }
 }
