--- a/package.json
+++ b/package.json
@@ -26,17 +26,18 @@
     "react-icons": "^4.10.1",
     "remark": "^14.0.2",
     "remark-html": "^15.0.2",
+    "swiper": "^9.0.0",
     "tailwind-bootstrap-grid": "^5.0.1",
-    "typescript": "5.0.2",
-    "swiper": "^9.0.0"
+    "tw-elements": "^1.0.0-beta3",
+    "typescript": "5.0.2"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.9",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
-    "tailwindcss": "^3.3.1",
     "prettier": "^2.8.3",
     "prettier-plugin-tailwindcss": "^0.2.2",
-    "sass": "^1.57.1"
+    "sass": "^1.57.1",
+    "tailwindcss": "^3.3.1"
   }
 }
