--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "date-fns": "^2.30.0",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
+    "fs": "^0.0.1-security",
     "gray-matter": "^4.0.3",
     "gsap": "^3.12.2",
     "marked": "^7.0.3",
@@ -24,6 +25,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
+    "react-lite-youtube-embed": "^2.3.52",
     "remark": "^14.0.2",
     "remark-html": "^15.0.2",
     "swiper": "^9.0.0",
@@ -39,5 +41,9 @@
     "prettier-plugin-tailwindcss": "^0.2.2",
     "sass": "^1.57.1",
     "tailwindcss": "^3.3.1"
+  },
+  "browser": {
+    "fs": false,
+    "path": false
   }
 }
