--- a/package.json
+++ b/package.json
@@ -21,12 +21,15 @@
     "gsap": "^3.12.2",
     "marked": "^7.0.3",
     "next": "13.2.4",
+    "next-mdx-remote": "^4.4.1",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
     "react-lite-youtube-embed": "^2.3.52",
+    "react-spinners": "^0.13.8",
     "remark": "^14.0.2",
+    "remark-gfm": "^3.0.1",
     "remark-html": "^15.0.2",
     "swiper": "^9.0.0",
     "tailwind-bootstrap-grid": "^5.0.1",
