--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@types/node": "18.15.5",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "axios": "^1.5.0",
     "date-fns": "^2.30.0",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "fs": "^0.0.1-security",
     "gray-matter": "^4.0.3",
     "gsap": "^3.12.2",
+    "local-storage": "^2.0.0",
     "marked": "^7.0.3",
     "next": "13.2.4",
     "next-mdx-remote": "^4.4.1",
